--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "eslint": "^9.15.0",
     "eslint-plugin-solid": "^0.14.4",
     "globals": "^15.12.0",
+    "postcss": "^8.4.49",
     "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
